# numeric-integration-rs

./: AGENT.md  Cargo.toml  README.md
src/: adaptive.rs  gaussian.rs  lib.rs  romberg.rs  simpson.rs  trapezoidal.rs
